Add /user/{id}/book to retrieve books which belong to specified user Add skipped entity`s method regenerate swagger docs
